Initial css grid
Grid is in place for whole document, and header. More styling is needed.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
             <div class="search">
                 <img class="svg search-button" src="./images/magnify.svg" alt="search button">
-                <input type="text" placeholder="Search" maxlength="100">
+                <input type="text" maxlength="100">
             </div>
             <div class="profile">
                 <img src="./images/bell-badge.svg" alt="notification bell" class="svg bell-icon">
@@ -75,7 +75,7 @@
         </div>
         <div class="body">
             <div class="projects">
-                Your Projects
+                <div class="legend">Your Projects</div>
                 <div class="card" id="card-1">
                     <div class="title">Calculator</div>
                     <div class="text">
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="announcements">
-                Announcements
+                <div class="legend">Announcements</div>
                 <div class="tile">
                     <div class="title">Site Maintenance</div>
                     <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ex temporibus quas totam dolore repudiandae accusamus facilis, adipisci quod doloremque modi maxime recusandae expedita eos nihil error non optio eligendi!</div>
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="trending">
-                Trending
+                <div class="legend">Trending</div>
                 <div class="tile">
                     <img src="./images/" alt="" class="svg ">
                     <div class="title">@user</div>
