CSS grid for body
Made body of dashboard responsive.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="card" id="card-1">
                     <div class="title">Calculator</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor sit dignissimos facilis illo. Quia reprehenderit nihil, ut nisi quas aspernatur repellendus molestias consectetur enim sapiente corporis, odit eveniet quam!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor sit dignissimos facilis illo.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -92,7 +92,7 @@
                 <div class="card" id="card-2">
                     <div class="title">Etch-A-Sketch</div>
                     <div class="text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo porro sequi commodi, ab iure repudiandae ipsam, suscipit odit nesciunt doloremque maiores officia nisi eius dolore quibusdam esse tempore, architecto assumenda.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo porro sequi commodi.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -103,7 +103,7 @@
                 <div class="card" id="card-3">
                     <div class="title">Sign-Up Page</div>
                     <div class="text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque numquam esse, harum, sequi quia enim autem nobis distinctio nam, odit deserunt aspernatur impedit maiores cumque? Praesentium voluptates at saepe atque!
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque numquam esse.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -114,7 +114,7 @@
                 <div class="card" id="card-4">
                     <div class="title">Rock Paper Scissors</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eos sed, dignissimos maxime qui quisquam esse, suscipit modi tenetur molestiae tempore, placeat ipsa voluptatem iure temporibus dolore magnam distinctio reprehenderit.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eos sed.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -124,7 +124,9 @@
                 </div>
                 <div class="card" id="card-5">
                     <div class="title">Next project goes here!</div>
-                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga itaque nam porro hic! Sunt dolores laboriosam distinctio optio debitis sit aperiam facere nulla in nisi. Illo harum pariatur minima ab.</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
@@ -133,7 +135,9 @@
                 </div>
                 <div class="card" id="card-6">
                     <div class="title">Next project goes here!</div>
-                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum unde possimus libero delectus, beatae alias error veritatis. Eaque ullam, nam necessitatibus optio repellat ratione consectetur, aut, officiis quo voluptas dolor!</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
@@ -141,44 +145,44 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements">
-                <div class="legend">Announcements</div>
-                <div class="tile">
-                    <div class="title">Site Maintenance</div>
-                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ex temporibus quas totam dolore repudiandae accusamus facilis, adipisci quod doloremque modi maxime recusandae expedita eos nihil error non optio eligendi!</div>
+                <div class="announcements">
+                    <div class="legend">Announcements</div>
+                    <div class="tile">
+                        <div class="title">Site Maintenance</div>
+                        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. or non optio eligendi!</div>
+                    </div>
+                    <div class="tile">
+                        <div class="title">Community Share Day</div>
+                        <div class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. sdam i qui. Sed?</div>
+                    </div>
+                    <div class="tile">
+                        <div class="title">Updated Privacy Policy</div>
+                        <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mhitectudantium minus.</div>
+                    </div>
                 </div>
-                <div class="tile">
-                    <div class="title">Community Share Day</div>
-                    <div class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste non labore nobis exercitationem officia odit nihil magnam ipsam quibusdam expedita! Veniam at repudiandae nobis tenetur quos quis sequi qui. Sed?</div>
+                <div class="trending">
+                    <div class="legend">Trending</div>
+                    <div class="tile">
+                        <img src="./images/" alt="" class="svg ">
+                        <div class="title">@user</div>
+                        <div class="text">description</div>
+                    </div>
+                    <div class="tile">
+                        <img src="./images/" alt="" class="svg ">
+                        <div class="title">@user</div>
+                        <div class="text">description</div>
+                    </div>
+                    <div class="tile">
+                        <img src="./images/" alt="" class="svg ">
+                        <div class="title">@user</div>
+                        <div class="text">description</div>
+                    </div>
+                    <div class="tile">
+                        <img src="./images/" alt="" class="svg ">
+                        <div class="title">@user</div>
+                        <div class="text">description</div>
+                    </div>
                 </div>
-                <div class="tile">
-                    <div class="title">Updated Privacy Policy</div>
-                    <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima quibusdam ex perspiciatis, exercitationem earum distinctio ut architecto aperiam facilis, nemo, quaerat placeat explicabo cupiditate temporibus voluptatem reprehenderit dignissimos laudantium minus.</div>
-                </div>
-            </div>
-            <div class="trending">
-                <div class="legend">Trending</div>
-                <div class="tile">
-                    <img src="./images/" alt="" class="svg ">
-                    <div class="title">@user</div>
-                    <div class="text">description</div>
-                </div>
-                <div class="tile">
-                    <img src="./images/" alt="" class="svg ">
-                    <div class="title">@user</div>
-                    <div class="text">description</div>
-                </div>
-                <div class="tile">
-                    <img src="./images/" alt="" class="svg ">
-                    <div class="title">@user</div>
-                    <div class="text">description</div>
-                </div>
-                <div class="tile">
-                    <img src="./images/" alt="" class="svg ">
-                    <div class="title">@user</div>
-                    <div class="text">description</div>
-                </div>
-            </div>
         </div>
     </div>
 </body>
