--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="card" id="card-1">
                     <div class="title">Calculator</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor sit dignissimos facilis illo.
+                        Lorem ipsum dolor sit amet conseelit. Veritsimos facilis illo.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -92,7 +92,7 @@
                 <div class="card" id="card-2">
                     <div class="title">Etch-A-Sketch</div>
                     <div class="text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo porro sequi commodi.
+                        Lorem ipsum, dolor sitadipisicing elit. Illo porro sequi commodi.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -103,7 +103,7 @@
                 <div class="card" id="card-3">
                     <div class="title">Sign-Up Page</div>
                     <div class="text">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque numquam esse.
+                        Lorem ipsum dolor sit, aing elit. Eaque numquam esse.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -114,7 +114,7 @@
                 <div class="card" id="card-4">
                     <div class="title">Rock Paper Scissors</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eos sed.
+                        Lorem ipsum dolor sit amet cocing elit. Quos eos sed.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -149,7 +149,7 @@
                     <div class="legend">Announcements</div>
                     <div class="tile">
                         <div class="title">Site Maintenance</div>
-                        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. or non optio eligendi!</div>
+                        <div class="text">Lorem ipsum dolor sit amet consectetur adipisasdffasdffds asdf ase icing elit. or non optio eligendi!</div>
                     </div>
                     <div class="tile">
                         <div class="title">Community Share Day</div>
@@ -163,22 +163,17 @@
                 <div class="trending">
                     <div class="legend">Trending</div>
                     <div class="tile">
-                        <img src="./images/" alt="" class="svg ">
+                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
                         <div class="title">@user</div>
                         <div class="text">description</div>
                     </div>
                     <div class="tile">
-                        <img src="./images/" alt="" class="svg ">
+                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
                         <div class="title">@user</div>
                         <div class="text">description</div>
                     </div>
                     <div class="tile">
-                        <img src="./images/" alt="" class="svg ">
-                        <div class="title">@user</div>
-                        <div class="text">description</div>
-                    </div>
-                    <div class="tile">
-                        <img src="./images/" alt="" class="svg ">
+                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
                         <div class="title">@user</div>
                         <div class="text">description</div>
                     </div>
