Added night mode toggle
Added dark/light modes by toggling a moon icon in the header. Added hover affects to most objects to make them more responsive.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,10 @@
                 <input type="text" maxlength="100">
             </div>
             <div class="profile">
+                <svg style="width:24px;height:24px" viewBox="0 0 24 24" class="night-mode svg">
+                    <path fill="currentColor" d="M2 12A10 10 0 0 0 15 21.54A10 10 0 0 1 15 2.46A10 10 0 0 0 2 12Z" />
+                </svg>
+                <!-- <img src="./images/night-mode.svg" alt="night mode" class="svg night-mode"> -->
                 <img src="./images/bell-badge.svg" alt="notification bell" class="svg bell-icon">
                 <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
                 Matt Cave
@@ -148,11 +152,11 @@
                 <div class="announcements">
                     <div class="legend">Announcements</div>
                     <div class="tile">
-                        <div class="title">Site Maintenance</div>
-                        <div class="text">Lorem ipsum dolor sit amet consectetur adipisasdffasdffds asdf ase icing elit. or non optio eligendi!</div>
+                        <div class="title">Night mode added!</div>
+                        <div class="text">Try new night mode by clicking the moon icon in the upper right!</div>
                     </div>
                     <div class="tile">
-                        <div class="title">Community Share Day</div>
+                        <div class="title">Site Maintenance</div>
                         <div class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. sdam i qui. Sed?</div>
                     </div>
                     <div class="tile">
