Linked projects to dashboard
Linked four projects to the dashboard, updated text in all the cards, added some more profile pictures

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24" class="night-mode svg">
                     <path fill="currentColor" d="M2 12A10 10 0 0 0 15 21.54A10 10 0 0 1 15 2.46A10 10 0 0 0 2 12Z" />
                 </svg>
-                <!-- <img src="./images/night-mode.svg" alt="night mode" class="svg night-mode"> -->
                 <img src="./images/bell-badge.svg" alt="notification bell" class="svg bell-icon">
                 <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
                 Matt Cave
@@ -82,54 +81,54 @@
         <div class="body">
             <div class="projects">
                 <div class="legend">Your Projects</div>
-                <div class="card" id="card-1">
+                <a href="https://caveman418.github.io/Calculator/" target="_blank" class="card" id="card-1">
                     <div class="title">Calculator</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet conseelit. Veritsimos facilis illo.
+                        iOS calculator with decimal/keyboard support!
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
-                </div>
-                <div class="card" id="card-2">
+                </a>
+                <a href="https://caveman418.github.io/Etch-a-sketch/" target="_blank" class="card" id="card-2">
                     <div class="title">Etch-A-Sketch</div>
                     <div class="text">
-                        Lorem ipsum, dolor sitadipisicing elit. Illo porro sequi commodi.
+                        Etch-a-sketch webpage with a variable grid size, color picker, random color mode, eraser, and paint bucket!
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
-                </div>
-                <div class="card" id="card-3">
+                </a>
+                <a href="https://caveman418.github.io/Sign-up-form/" target="_blank" class="card" id="card-3">
                     <div class="title">Sign-Up Page</div>
                     <div class="text">
-                        Lorem ipsum dolor sit, aing elit. Eaque numquam esse.
+                        Front-end signup page with client-side validation and responsive UI.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
-                </div>
-                <div class="card" id="card-4">
+                </a>
+                <a href="https://caveman418.github.io/RockPaperScissors/" target="_blank" class="card" id="card-4">
                     <div class="title">Rock Paper Scissors</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet cocing elit. Quos eos sed.
+                        Play rock paper scissors against a computer, first to five wins!
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
                         <img src="./images/eye.svg" alt="watch" class="svg eye">
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
-                </div>
+                </a>
                 <div class="card" id="card-5">
                     <div class="title">Next project goes here!</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Start a new project! You can access all your projects from this panel.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -140,7 +139,7 @@
                 <div class="card" id="card-6">
                     <div class="title">Next project goes here!</div>
                     <div class="text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Start a new project! You can access all your projects from this panel.
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
@@ -157,29 +156,29 @@
                     </div>
                     <div class="tile">
                         <div class="title">Site Maintenance</div>
-                        <div class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. sdam i qui. Sed?</div>
+                        <div class="text">Site will be down from Friday 8:00PM EST to Saturday 4:00AM EST</div>
                     </div>
                     <div class="tile">
                         <div class="title">Updated Privacy Policy</div>
-                        <div class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mhitectudantium minus.</div>
+                        <div class="text">Click here to read our updated privacy policy</div>
                     </div>
                 </div>
                 <div class="trending">
                     <div class="legend">Trending</div>
                     <div class="tile">
-                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
-                        <div class="title">@user</div>
-                        <div class="text">description</div>
+                        <img src="./images/profile-pic2.png" alt="profile picture" class="profile-pic">
+                        <div class="title">@Sarina24</div>
+                        <div class="text">Full-stack developer</div>
                     </div>
                     <div class="tile">
-                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
-                        <div class="title">@user</div>
-                        <div class="text">description</div>
+                        <img src="./images/profile-pic3.png" alt="profile picture" class="profile-pic">
+                        <div class="title">@Clemens_Linus</div>
+                        <div class="text">Dentist</div>
                     </div>
                     <div class="tile">
-                        <img src="./images/profile-pic.jpg" alt="profile picture" class="profile-pic">
-                        <div class="title">@user</div>
-                        <div class="text">description</div>
+                        <img src="./images/profile-pic4.png" alt="profile picture" class="profile-pic">
+                        <div class="title">@Rory_Luka</div>
+                        <div class="text">Chemical Engineer</div>
                     </div>
                 </div>
         </div>
