Added Library project
Moved things around, and added new personal project.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,18 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/Sign-up-form/" target="_blank" class="card" id="card-3">
+                <a href="https://caveman418.github.io/Library/" target="_blank" class="card" id="card-3">
+                    <div class="title">Library</div>
+                    <div class="text">
+                        Keep track of books you want to read, and mark which ones you've finished!
+                    </div>
+                    <div class="options">
+                        <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
+                        <img src="./images/eye.svg" alt="watch" class="svg eye">
+                        <img src="./images/fork.svg" alt="fork" class="svg fork">
+                    </div>
+                </a>
+                <a href="https://caveman418.github.io/Sign-up-form/" target="_blank" class="card" id="card-4">
                     <div class="title">Sign-Up Page</div>
                     <div class="text">
                         Front-end signup page with client-side validation and responsive UI.
@@ -114,7 +125,7 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/RockPaperScissors/" target="_blank" class="card" id="card-4">
+                <a href="https://caveman418.github.io/RockPaperScissors/" target="_blank" class="card" id="card-5">
                     <div class="title">Rock Paper Scissors</div>
                     <div class="text">
                         Play rock paper scissors against a computer, first to five wins!
@@ -125,17 +136,6 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <div class="card" id="card-5">
-                    <div class="title">Next project goes here!</div>
-                    <div class="text">
-                        Start a new project! You can access all your projects from this panel.
-                    </div>
-                    <div class="options">
-                        <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
-                        <img src="./images/eye.svg" alt="watch" class="svg eye">
-                        <img src="./images/fork.svg" alt="fork" class="svg fork">
-                    </div>
-                </div>
                 <div class="card" id="card-6">
                     <div class="title">Next project goes here!</div>
                     <div class="text">
