Switched out a project

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/RockPaperScissors/" target="_blank" class="card" id="card-5">
-                    <div class="title">Rock Paper Scissors</div>
+                <a href="https://caveman418.github.io/Tic-Tac-Toe/" target="_blank" class="card" id="card-5">
+                    <div class="title">Tic-Tac-Toe</div>
                     <div class="text">
-                        Play rock paper scissors against a computer, first to five wins!
+                        Play Tic-Tac-Toe against a friend!
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
