Swapped out a project

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/Library/" target="_blank" class="card" id="card-3">
-                    <div class="title">Library</div>
+                <a href="https://caveman418.github.io/restaurant-page/" target="_blank" class="card" id="card-3">
+                    <div class="title">Restaurant Page</div>
                     <div class="text">
-                        Keep track of books you want to read, and mark which ones you've finished!
+                        Example restaurant website with dynamically rendered javascript and compiled with webpack!
                     </div>
                     <div class="options">
                         <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
