Added weather app

--- a/index.html
+++ b/index.html
@@ -114,7 +114,18 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/Sign-up-form/" target="_blank" class="card" id="card-4">
+                <a href="https://caveman418.github.io/weatherPage/" target="_blank" class="card" id="card-4">
+                    <div class="title">Weather App</div>
+                    <div class="text">
+                        Simple weather app using openweathermap's free API.
+                    </div>
+                    <div class="options">
+                        <img src="./images/favorite.svg" alt="favorite" class="svg favorite">
+                        <img src="./images/eye.svg" alt="watch" class="svg eye">
+                        <img src="./images/fork.svg" alt="fork" class="svg fork">
+                    </div>
+                </a>
+                <a href="https://caveman418.github.io/Sign-up-form/" target="_blank" class="card" id="card-5">
                     <div class="title">Sign-Up Page</div>
                     <div class="text">
                         Front-end signup page with client-side validation and responsive UI.
@@ -125,7 +136,7 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <a href="https://caveman418.github.io/Tic-Tac-Toe/" target="_blank" class="card" id="card-5">
+                <a href="https://caveman418.github.io/Tic-Tac-Toe/" target="_blank" class="card" id="card-6">
                     <div class="title">Tic-Tac-Toe</div>
                     <div class="text">
                         Play Tic-Tac-Toe against a friend!
@@ -136,7 +147,7 @@
                         <img src="./images/fork.svg" alt="fork" class="svg fork">
                     </div>
                 </a>
-                <div class="card" id="card-6">
+                <div class="card" id="card-7">
                     <div class="title">Next project goes here!</div>
                     <div class="text">
                         Start a new project! You can access all your projects from this panel.
